fix: swagger routes
